// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result component should render correct markup dilation and runtimeError is true 1`] = `
<Result__AnimatedContentTransition>
  <_default
    matrixInRowMajorOrder={
      Array [
        1,
        2,
        3,
        4,
      ]
    }
  />
  <ErrorMessage />
</Result__AnimatedContentTransition>
`;

exports[`Result component should render correct markup dilation prop is defined 1`] = `
<Result__AnimatedContentTransition>
  <_default
    matrixInRowMajorOrder={
      Array [
        1,
        2,
        3,
        4,
      ]
    }
  />
</Result__AnimatedContentTransition>
`;

exports[`Result component should render correct markup validationError is true 1`] = `
<Result__AnimatedContentTransition>
  <Component />
</Result__AnimatedContentTransition>
`;

exports[`Result component should render correct markup when error and dilation are undefined 1`] = `<Result__AnimatedContentTransition />`;

exports[`Result component should render correct markup when isLoading is true 1`] = `
<Result__AnimatedContentTransition>
  <LoadingIndicator
    getRandomInt={[Function]}
  />
</Result__AnimatedContentTransition>
`;
